--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 * {
     font-family: 'Inter', sans-serif;
     font-family: 'Merriweather', serif;
+    display: 100%;
+    max-width: 1350px;
+    margin:0 auto;
 }
 
 .container {
@@ -70,8 +73,8 @@ main section{
 
 .party-banner {
     display: flex;
-    padding-left: 800px;
-    padding-top: 100px;
+    padding-left: 50px;
+    padding-top: 120px;
 
 
 }
@@ -90,7 +93,7 @@ main section{
 }
 
 .button {
-    background-color: black;
+    background-color: rgb(5, 230, 53);
     color: white;
     font-size: 25px;
     border-radius: 25px;
@@ -99,30 +102,33 @@ main section{
 }
 
 .btn {
-    background-color: red;
+    background-color: orange;
     color: white;
     font-size: 25px;
     border-radius: 25px;
-    padding: 20px;
+    padding: 20px 10px ;
     font-weight: 500;
+    margin-top: 20px;
 
 }
 
 
 .address-container {
     width: 1320px;
-    height: 483px;
-    margin: 0px 80px 0px 585px;
+    height: 683px;
+    margin: 0px 0px 0px 15px;
 
 }
 
 address {
+    margin-top: 20px;
     font-size: 32px;
     background-position: center;
     background-color: lightpink;
     text-align: center;
-    padding-top: 50px;
+    padding-bottom: 110px;
     border-radius: 20px;
+    padding-top: 100px;
 
 }
 
@@ -132,7 +138,8 @@ address {
 
 .best-offer {
     display: flex;
-    padding: 5px 200px 5px 600px;
+    margin-top: -250px;
+
 
 }
 
@@ -140,8 +147,7 @@ address {
     color: #e10909;
     font-weight: 500;
     font-size: 26px;
-    margin-top: 120px;
-    margin-bottom: -40px;
+    margin-bottom: 0px;
 }
 
 .best-offer .title-comming {
@@ -160,7 +166,7 @@ address {
 
 .best-offer .title-image {
     border: #e10909;
-    margin: 20px;
+    margin: 0px;
 }
 
 .best-offer .title-image {
@@ -172,20 +178,19 @@ address {
     font-size: 50px;
     color: #e10909;
     font-weight: 700;
-    padding-top: 60px;
-    padding-left: 80px;
+
 
 }
 
 .best-offer .title-description {
     font-size: 22px;
     color: rgba(7, 2, 17, 0.60);
-    padding-left: 80px;
+
 
 }
 
 .best-offer .img {
-    margin-left: 90px;
+    margin-left: 10px;
 }
 
 .holiday {
