--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ address {
     justify-content: center;
     text-align: center;
     align-items: center;
+    padding-right: 10px;
 
 }
 .container-card .card-picture img{
