--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .container {
     width: 100%;
     height: 600px;
-    background-image: url(../resources/Banner\ Image.png);
+    background-image: url("./resources/Banner\ Image.png");
     background-repeat: no-repeat;
     background-position: top;
     border-radius: 20px;
@@ -19,7 +19,7 @@
 .container-text {
     text-align: center;
     color: rgb(250, 87, 12);
-    padding-top: 90px;
+    padding-top: 70px;
     font-size: 40px;
     font-weight: 400;
 
@@ -30,7 +30,6 @@
     text-align: center;
     color: #e10909;
     font-weight: 900;
-    margin-top: -30px;
 
 }
 
@@ -65,7 +64,7 @@ main section{
 .party {
     width: 100%;
     height: 600px;
-    background-image: url(../resources/Vectorrr.png);
+    background-image: url("./resources/Vectorrr.png");
     background-repeat: no-repeat;
     background-position: top;
     border-radius: 20px;
