--- a/style.css
+++ b/style.css
@@ -294,9 +294,11 @@ address {
     padding-right: 10px;
 
 }
-.container-card .card-picture img{
+.container-card .card-picture{
     width: 100%;
     height: 100%;
+    padding: 15px;
+
 }
 .subscribe{
     width: 100%;
