--- a/style.css
+++ b/style.css
@@ -283,7 +283,8 @@ address {
     display: flex;
     justify-content: center;
     align-items: top;
-    padding: 10px;
+    gap: 20px 20px 20px 20px;
+    margin-top: 20px;
 
 }
 .container-card{
@@ -291,15 +292,14 @@ address {
     justify-content: center;
     text-align: center;
     align-items: center;
-    padding-right: 10px;
+    padding-right: 10px;  
 
 }
-.container-card .card-picture{
-    width: 100%;
-    height: 100%;
-    padding: 15px;
+.card-picture img{
+    display: flex;
 
 }
+
 .subscribe{
     width: 100%;
     height: 100%;
