--- a/style.css
+++ b/style.css
@@ -285,6 +285,8 @@ address {
     align-items: top;
     gap: 20px 20px 20px 20px;
     margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 
 }
 .container-card{
