--- a/style.css
+++ b/style.css
@@ -232,16 +232,24 @@ address {
     font-weight: 500;
     text-align: center;
 }
-
-.border {
-    background-color: rgb(213, 34, 60);
-    background-image: url('../resources/Rectangle\ 1.png');
+.fifth-percent{
+    display: flex;
+    background-image: url("resources/Rectangle\ 1.png");
     background-repeat: no-repeat;
     background-position: right;
-    background-size:auto;
-    width: 1350px;
-    height: 400px;
-    border-radius: 15px 0px 15px 15px;
+
+
+}
+.fifth-percent-offer{
+    padding-right: 200px;
+    
+}
+
+.top {
+    background-image: url("./resources/Rectangle\ 2.png");
+    background-repeat: no-repeat;
+    background-position: bottom;
+
 }
 .border .banner{
     display: flex;
